bynkc/tests/fixtures/positive/86_service_with_given/src/demo/svc.karn
context demo.svc

capability Logger {
  fn log(message: String) -> Effect[()]
}

service announce {
  on call(message: String) -> Effect[()] given Logger {
    let _ <- Logger.log(message)
    Effect.pure(())
  }
}
