bynkc/tests/fixtures/negative/65_given_undeclared_capability/src/demo/svc.karn
context demo.svc

capability Logger {
  fn log(message: String) -> Effect[()]
}

service noisy {
  on call() -> Effect[()] {
    let _ <- Logger.log("hi")
    Effect.pure(())
  }
}
